--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "tetris, foo!",
   "main": "index.js",
   "scripts": {
-    "test": "nope"
+    "test": "nope",
+    "start": "webpack -w"
   },
   "keywords": [
     "react"
@@ -16,6 +17,7 @@
     "babel-core": "^5.7.4",
     "babel-eslint": "^3.1.23",
     "babel-loader": "^5.3.2",
+    "browser-sync": "^2.7.13",
     "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
     "rx": "^2.5.3",
