--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "author": "Berkeley Martinez <Berkeley@RoboTie.com> (http://RoboTie.com)",
   "license": "MIT",
   "dependencies": {
-    "babel": "^5.6.23",
-    "babel-core": "^5.7.4",
-    "babel-eslint": "^3.1.23",
-    "babel-loader": "^5.3.2",
+    "babel": "^5.6.14",
+    "babel-core": "^5.6.15",
+    "babel-eslint": "^3.1.7",
+    "babel-loader": "^5.2.2",
     "browser-sync": "^2.7.13",
     "node-libs-browser": "^0.5.2",
+    "object.assign": "^3.0.1",
     "react": "^0.13.3",
-    "rx": "^2.5.3",
+    "rx": "2.5.3",
     "thundercats": "^2.0.0-rc9",
     "thundercats-react": "0.0.4",
-    "webpack": "^1.10.1"
+    "webpack": "^1.9.12"
   }
 }
